--- a/.github/workflows/QBox_test.yml
+++ b/.github/workflows/QBox_test.yml
@@ -1,3 +1,5 @@
+name: QBox_test
+
 on:
 
   workflow_dispatch:
@@ -12,7 +14,7 @@ jobs:
           - userName: q215613905
             repoName: TVBoxOS
             branchName: main
-            appName: main
+            appName: QBox
          
     steps:
       - name: Checkout
