--- a/.github/workflows/TVBox_build.yml
+++ b/.github/workflows/TVBox_build.yml
@@ -25,7 +25,7 @@ jobs:
             repoName: MaoTV
             branchName: main
             appName: MaoTV
-            osName: mt
+            osName: lm
    
     steps:
       - name: Checkout
