--- a/.github/workflows/MaoTV_build.yml
+++ b/.github/workflows/MaoTV_build.yml
@@ -121,15 +121,16 @@ jobs:
           echo "commit=" >> $GITHUB_ENV
           
       - name: Release and Upload Assets
-        uses: ncipollo/release-action@v1
+        uses: softprops/action-gh-release@v1
         if: ${{ env.commit }}
         with:
           name: ${{ env.tag }}
-          tag: ${{ env.tag }}
-          allowUpdates: false
-          removeArtifacts: true
-          artifacts: |
+          tag_name: ${{ env.tag }}
+          body: ${{ env.commit }}
+          files: |
             ${{ matrix.repoName }}/apk/*.apk
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
             
       
       
