--- a/.github/workflows/TVBox_test.yml
+++ b/.github/workflows/TVBox_test.yml
@@ -27,9 +27,10 @@ jobs:
         run: |
           upStream=https://github.com/${{ matrix.userName }}/${{ matrix.repoName }}
           echo "upStream=$upStream" >> $GITHUB_ENV
-          commit=$(curl -sL $upStream/commits/${{ matrix.branchName }} |grep -o "/${{ matrix.userName }}/${{ matrix.repoName }}/commit/[a-z0-9]\+" |head -1 | cut -d\/ -f5)
+          commit=$(curl -sL $upStream/commits/main |grep -o '/${{ matrix.userName }}/${{ matrix.repoName }}/commit/[a-z0-9]\+' |head -1 | cut -d\/ -f5)
           if ! git log --oneline |grep -q "$commit"; then
-            echo "commit=$commit" >> $GITHUB_ENV
+             echo "commit=$commit" >> $GITHUB_ENV
+            echo "tag=$(date -d '8 hour' -u +%Y%m%d-%H%M)" >> $GITHUB_ENV
           fi
       - name: Checkout Source Code and Zip
         if: ${{ env.commit }}
@@ -37,8 +38,7 @@ jobs:
           git clone ${{ env.upStream }} ${{ matrix.repoName }}
           cd ${{ matrix.repoName }}
           git checkout ${{ env.commit }}
-          　echo "tag=$(git log --date=format:'%Y%m%d-%H%M' --pretty=format:%cd ${{ env.commits }} -1)" >> $GITHUB_ENV
-          zip -q -x ".git/*" -r source-${{ env.commitS }}.zip .
+         zip -q -x ".git/*" -r source.zip .
           
       - name: DIY
         if: ${{ env.commit }}
