--- a/.github/workflows/TBox_build.yml
+++ b/.github/workflows/TBox_build.yml
@@ -31,6 +31,7 @@ jobs:
              echo "commit=$commit" >> $GITHUB_ENV
             echo "tag=$(date -d '8 hour' -u +%Y%m%d-%H%M)" >> $GITHUB_ENV
           fi
+          
       - name: Checkout Source Code and Zip
         if: ${{ env.commit }}
         run: |
@@ -46,9 +47,17 @@ jobs:
           cp -rf $GITHUB_WORKSPACE/DIY/xwalk_shared_library-23.53.589.4.aar app/libs/xwalk_shared_library-23.53.589.4.aar
           cp -rf $GITHUB_WORKSPACE/DIY/thunder.jar app/libs/thunder.jar
           cp -rf $GITHUB_WORKSPACE/DIY/pyramid.aar app/libs/pyramid.aar
+          cp -rf $GITHUB_WORKSPACE/DIY/png/等待图标.png app/src/main/res/drawable/icon_loading.png
+          cp -rf $GITHUB_WORKSPACE/DIY/tbox/taka旧主界面.xml app/src/main/res/layout/fragment_user.xml
+          cp -rf $GITHUB_WORKSPACE/DIY/tbox/activity_home_top界面.xml app/src/main/res/layout/activity_home.xml
+          cp -rf $GITHUB_WORKSPACE/DIY/qbox/epg_data.json app/src/main/assets/epg_data.json
+          sed -i 's%color_BBFFFFFF%color_32364E_80%g' app/src/main/res/layout/item_home_sort.xml
+          sed -i 's%color_CCFFFFFF%color_32364E_80%g' app/src/main/res/layout/fragment_user.xml
+          sed -i 's%color_BBFFFFFF%color_32364E_80%g' app/src/main/java/com/github/tvbox/osc/ui/activity/HomeActivity.java
+          sed -i 's/MM月dd日/yyyy年 MM月 dd日/g' app/src/main/res/values-zh/strings.xml
           sed -i 's%TVBox%TBox%g' app/src/main/res/values-zh/strings.xml
           sed -i 's%com.github.tvbox.osc%com.github.tvbox.osc.${{ matrix.osName }}%g' app/build.gradle
-          sed -i 's%HawkConfig.HOME_REC, 2%HawkConfig.HOME_REC, 1%g' app/src/main/java/com/github/tvbox/osc/base/App.java  
+          sed -i 's%HOME_REC, 2%HOME_REC, 1%g' app/src/main/java/com/github/tvbox/osc/base/App.java  
           sed -i 's%HomeActivity.getRes().getString(R.string.app_source));% "https://0a.fit/bbNnz");%g' app/src/main/java/com/github/tvbox/osc/api/ApiConfig.java     
            
       - name: Extra Modify
